2010-03-30  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        SVG Glyph transformations wrong on use of SVGFont
        https://bugs.webkit.org/show_bug.cgi?id=36731

        Kerning on SVGFonts should be applied to the userSpace of the current Char
        and not to the userSpace of the viewport. This means scaling the kerning
        to match the current userSpace.

        Test: svg/custom/glyph-transformation-with-hkern.svg

        * rendering/SVGRootInlineBox.cpp:
        (WebCore::SVGRootInlineBox::buildLayoutInformationForTextBox):
2010-03-30  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG Glyph transformations wrong on use of SVGFont
        https://bugs.webkit.org/show_bug.cgi?id=36731

        Test of correct scaled kerning, if userSpace on SVGFont doesn't
        match the scaling of the viewport userSpace.

        * platform/mac/svg/W3C-SVG-1.1/fonts-kern-01-t-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/masking-mask-01-b-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/render-groups-01-b-expected.txt:
        * platform/mac/svg/W3C-SVG-1.1/render-groups-03-t-expected.txt:
        * platform/mac/svg/custom/scrolling-embedded-svg-file-image-repaint-problem-expected.txt:
        * svg/custom/glyph-transformation-with-hkern.svg: Added.
        * svg/custom/resources/SVGFreeSans.svg: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@56776 bbb929c8-8fbe-4397-9dbb-9b2b20218538